feat: shell types 1